fix: svg icons not showing on footer section

--- a/app/assets/stylesheets/_footer.scss
+++ b/app/assets/stylesheets/_footer.scss
@@ -33,6 +33,14 @@
     &:hover .sk-app-bar-item-column {
       border-bottom: 2px solid var(--sn-stylekit-info-color);
     }
+
+    .sk-app-bar-item-column {
+      width: 100%;
+
+      * {
+        width: 100%;
+      }
+    }
   }
 }
 
